--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,11 @@
+.box-color {
+    background: rgb(0, 0, 0);
+}
 
-/* 
+.number-size {
+    font-size: 6rem;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body {
+    font-family: 'Croissant One';
+}
